tests/fixtures/invalid/bytes_notin_bool.py
# Cannot use 'not in' with Bytes and Bool
x: bool = b"hello" not in True
